--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,9 +1,13 @@
 .Card {
-  background-color: red;
-  border: 3px solid red;
+  border: 3px solid;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+
+  min-width: 500px;
+  max-width: 500px;
 }
 
 .Card .Title {
@@ -12,6 +16,7 @@
   justify-content: center;
 }
 .Card .Content {
+  flex: 1;
   background-color: #fff;
   color: #000;
   padding: 10px;
